gap fixes

--- a/client/src/components/Buttons/XButton.css
+++ b/client/src/components/Buttons/XButton.css
@@ -1,5 +1,5 @@
 .x-button {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: -4rem;
     font-size: 3rem;
