--- a/client/src/components/ShowMainAction/ShowMainAction.css
+++ b/client/src/components/ShowMainAction/ShowMainAction.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    padding: 0 1rem;
+    padding: 1rem;
 }
 
 .show-main-action-info {
