--- a/client/src/pages/Show.css
+++ b/client/src/pages/Show.css
@@ -5,18 +5,18 @@
 .show-main-content {
     background-color: white;
     width: 100%;
-    padding: 1rem var(--gap-from-bazel);
+    padding: 0; /* var(--gap-from-bazel);  it might look good with thin bazel, or might not*/
     box-shadow: 0 -10px 30px -17px rgba(0, 0, 0, 0.25);
     scroll-behavior: smooth;
     position: relative;
-    top: var(--show-head-height);
+    top: var(--show-head-height); 
 }
 
 .show-main-grid {
     display: grid;
     gap: 1rem;
     grid-template-columns: 1fr 2fr 1fr;
-    padding-top: 1rem;
+    padding: 1rem;
 }
 
 .show-main-grid > * {
@@ -26,6 +26,7 @@
 @media screen and (max-width: 1500px) {
     .show-main-grid {
         grid-template-columns: 1fr 3fr 1fr;
+        padding: 0;
     }
 }
 
@@ -44,6 +45,7 @@
 
 @media screen and (max-width: 1000px){
     .show-main-grid {
-        width: 100%
+        width: 100%;
+        padding: 0 var(--gap-from-bazel);
     }
 } 
